# indigo

./: CMakeLists.txt  LICENSE  README.md
indigo/: CMakeLists.txt  indigo.cpp  indigo.h  main.cpp
